<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/botoomsheat_user_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:layout_margin="@dimen/_10sdp"
    app:elevation="@dimen/_5sdp"

    app:layout_behavior="com.example.dheeraj.testdemo.LockableBottomSheetBehavior">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"

        android:gravity="center"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:gravity="center">



                  <com.example.dheeraj.testdemo.font.CustomFontTextView
                      app:font="@string/font_name_fontawesome"
                      android:text="&#xf05c;"
android:textSize="@dimen/_25sdp"
                      android:id="@+id/img_cross"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        />
-->
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|left">

                <com.example.dheeraj.testdemo.font.CustomFontTextView
                    app:font="@string/font_name_helvetica"

                    android:layout_marginLeft="@dimen/_45sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"

                    android:text="@string/send_poke_message"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />


            </LinearLayout>



        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>