<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity_Profile">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:fitsSystemWindows="true"
        android:theme="@style/MyMaterialTheme">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/direction_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            card_view:cardElevation="@dimen/_5sdp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:background="@color/window_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/single_news_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_news"
                    android:textColor="@color/window_background"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textSize="@dimen/_20sdp"
                    android:padding="@dimen/_12sdp"/>

                <LinearLayout
                    android:clickable="true"
                    android:onClick="click_Bottomsheat"
                    android:background="@color/window_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_clear"
                        android:contentDescription="@string/app_name"/>

                    <TextView
                        android:id="@+id/publish_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/published_date"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        android:layout_weight="9"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/news_main_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_news"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"
                    android:lineSpacingMultiplier="1.5"
                    android:textSize="@dimen/_13sdp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <include
        layout="@layout/bottomsheat_user_list"></include>

</android.support.design.widget.CoordinatorLayout>